# x-growth

./: .copilotignore  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  ROADMAP.md  SECURITY.md  dashboard-server.js  docker-compose.coolify.yml  docker-compose.yml  fly.toml  glama.json  jsconfig.json  llms-full.txt  llms.txt  metadata.json  nixpacks.toml  package-lock.json  package.json  railway.json  railway.toml  render.yaml  server.json  setup-puppeteer.sh  setup.sh  start.sh  vercel.json  vitest.config.js  wrangler.toml
python/xeepy/: README.md  __init__.py  cli.py  daemon.py  pyproject.toml  requirements.txt  safety_monitor.py  setup.py
python/xeepy/actions/: __init__.py  base.py  polls.py  settings.py  types.py
python/xeepy/ai/: __init__.py  content_generator.py  crypto_analyzer.py  influencer_finder.py  sentiment_analyzer.py  smart_targeting.py  spam_detector.py  thread_analyzer.py
python/xeepy/analytics/: __init__.py  audience_insights.py  best_time_to_post.py  competitor_analysis.py  engagement_analytics.py  growth_tracker.py  reports.py
python/xeepy/api/: __init__.py  graphql.py  server.py
python/xeepy/cli/: __init__.py  bookmark_commands.py  commands.py  comment_commands.py  like_commands.py  main.py  retweet_commands.py  utils.py
python/xeepy/config/: __init__.py  default_config.yaml  settings.py
python/xeepy/core/: __init__.py  auth.py  browser.py  config.py  exceptions.py  rate_limiter.py  selectors.py  utils.py
python/xeepy/docs/: API_REFERENCE.md  CLI_REFERENCE.md  EXAMPLES.md  FEATURES.md  FOLLOW_UNFOLLOW.md  INSTALLATION.md  README.md
python/xeepy/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py  sqlite_exporter.py
python/xeepy/models/: __init__.py  engagement.py  tweet.py  user.py
python/xeepy/monitoring/: __init__.py  account_monitor.py  engagement_tracker.py  follower_alerts.py  keyword_monitor.py  unfollower_detector.py
python/xeepy/notifications/: __init__.py  console.py  email.py  manager.py  telegram.py  webhook.py
python/xeepy/scrapers/: __init__.py  base.py  downloads.py  followers.py  following.py  hashtag.py  likes.py  lists.py  media.py  profile.py  recommendations.py  replies.py  search.py  spaces.py  thread.py  tweets.py
python/xeepy/storage/: __init__.py  database.py  follow_tracker.py  snapshots.py  timeseries.py
python/xeepy/tests/: __init__.py  conftest.py  test_ai_providers.py  test_analytics.py  test_api.py  (+16 more)
(+2785 files in other folders)
